--- a/package.json
+++ b/package.json
@@ -9,11 +9,9 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.39.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  },
-  "devDependencies": {
     "@vitejs/plugin-react": "^4.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "vite": "^5.0.0"
   }
 }
